syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "TutorialGuide.proto";

message GetTutorialGuideScRsp {
	uint32 Retcode = 1;
	repeated TutorialGuide TutorialGuideList = 2;
}