syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "TutorialStatus.proto";

message TutorialGuide {
	TutorialStatus Status = 5;
	uint32 Id = 3;
}