syntax = "proto3";

option java_package = "emu.lunarcore.proto";

enum TutorialStatus {
	TUTORIAL_NONE = 0;
	TUTORIAL_UNLOCK = 1;
	TUTORIAL_FINISH = 2;
}